<resources>
    <string name="app_name">Handy Tasks</string>
    <string name="title_activity_main" translatable="false">Handy Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_init_cloud">Select storage provider</string>
    <string name="title_activity_task_list">Tasks</string>
    <string name="title_activity_task_view">Task</string>
    <string name="action_create_task">Create new task</string>
    <string name="action_select_cloud_provider">Select cloud provider</string>
    <string name="action_sync_now">Sync now</string>
    <string name="error_interacting_with_cloud">Error interacting with cloud</string>
    <string name="error_details_caption">"Error details: "</string>
    <string name="dropbox_caption" translatable="false">Dropbox</string>
    <string name="google_drive_caption" translatable="false">Google Drive</string>
    <string name="please_select_sync_engine_to_use">Please select storage engine to use:</string>
    <string name="task_completed_caption">Completed</string>
    <string name="init_cloud_welcome_text">Handy Tasks uses cloud to store tasks. Currently, it supports Dropbox (recommended) and Google Drive™. You can always change the type of storage later on.</string>
    <string name="dropbox_not_linked">Dropbox is not linked yet</string>
    <string name="cant_link_dropbox_without_parent_activity" translatable="false">Can\'t start Dropbox link without parent activity reference</string>
    <string name="title_activity_prefs">Settings</string>
    <string name="pref_title_new_message_notifications">Enable notifications</string>
    <string name="pref_title_ringtone">Notification sound</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_hint">Search for task text</string>
    <string name="action_view_archive">Archived tasks</string>
    <string name="title_task_list_mainlist">Tasks</string>
    <string name="title_task_list_archive">Archive</string>

    <string name="title_activity_about">About application</string>
    <string name="app_description">Handy Tasks is a very simple task management application, able to sync it\'s data with major cloud storage providers.</string>
    <string name="action_about">About</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="archived_postions">Archived tasks: %s</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="itemdeleted">Task about to be archived, swipe to confirm</string>

    <string name="timeinterval_morning">Morning</string>
    <string name="timeinterval_afternoon">Afternoon</string>
    <string name="timeinterval_evening">Evening</string>
    <string name="timeinterval_night">Night</string>
    <string name="failed_to_resolve_connection_issue">Failed to resolve connection issue</string>
    <string name="task_created">"Task created: "</string>
    <string name="failed_to_create_task">"Failed to create task: "</string>
    <string name="google_drive_warning">Google Drive sync are not always happen immediately when your todo list changes somewhere outside this application. To force sync use \'Sync now\' menu item in task list.</string>
    <string name="connection_setup_canceled">Connection setup canceled</string>
    <string name="pick_location">Pick location...</string>
    <string name="no_place_info">No place info</string>
    <string name="time_for_task">Time for task</string>
    <string name="you_are_near_location">You are near location</string>
    <string name="loading_tasks">Loading tasks...</string>
    <string name="search_results">Search results</string>
    <string name="failed_to_initialize_cloud_connection">Failed to initialize cloud connection</string>
    <string name="error_details">"Error details: "</string>
    <string name="try_again_question">Try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sync_requested">Sync requested</string>
    <string name="failed_to_sync">"Failed to sync: "</string>
    <string name="task_archived_toast">Task \"%s\" archived</string>
    <string name="remind_on_time">Remind on time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="remind_near_location">Remind near location</string>
    <string name="place_selected_toast">Place: %s</string>
    <string name="auto_archive_summary">Whether or not completed tasks should be moved to archive.txt</string>
    <string name="auto_archive_title">Auto archive</string>
    <string name="theme_title">Theme</string>
    <string name="cloud_provider_selection_summary">Allows to select cloud provider to store your tasks. If you change currently selected provider tasks stored will not be preserved in program, but will appear again if you switch back to old provider.</string>
    <string name="cloud_provider_selection_title">Select cloud provider</string>
    <string name="task_list_font_size">Task list font size</string>
    <string name="location_proximity_title">Location proximity</string>
    <string name="location_proximity_summary">Select proximity radius for location based reminders in meters</string>
    <string name="notifications">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="general">General</string>
    <string name="text_az">Text A-Z</string>
    <string name="text_za">Text Z-A</string>
    <string name="unfinished_text_az">Unfinished first, Text A-Z</string>
    <string name="unfinished_text_za">Unfinished first, Text Z-A</string>
    <string name="search">Search</string>
    <string name="on_location">On location</string>
    <string name="on_time">On time</string>
    <string name="pick_date">Pick date...</string>
    <string name="pick_time">Pick time...</string>
    <string name="done">Done</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_reminder"><u>Add reminder</u></string>
    <string name="remove_reminder"><u>Remove reminder</u></string>
    <string name="today_underline"><u>Today</u></string>
    <string name="morning_underline"><u>Morning</u></string>

</resources>
