<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="com.handytasks.handytasks.activities.InitCloud">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:text="@string/init_cloud_welcome_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="32dp"
        android:text="@string/please_select_sync_engine_to_use"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_dropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onInitDropbox"
            android:text="@string/dropbox_caption" />

        <RadioButton
            android:id="@+id/radio_google_drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onInitGoogleDrive"
            android:text="@string/google_drive_caption"

            />
    </RadioGroup>

</LinearLayout>
