<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">
        <Preference
            android:summary="Allows to select cloud provider to store your tasks. If you change currently selected provider tasks stored will not be preserved in program, but will appear again if you switch back to old provider."
            android:title="Select cloud provider">
            <intent
                android:targetClass="com.handytasks.handytasks.activities.InitCloud"
                android:targetPackage="com.handytasks.handytasks" />
        </Preference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_archive_completed"
            android:summary="Whether or not completed tasks should be moved to archive.txt"
            android:title="Auto archive completed tasks" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Appearance">
        <ListPreference
            android:defaultValue="HandyTasksTheme"
            android:entries="@array/themeCaptions"
            android:entryValues="@array/themeValues"
            android:key="theme"
            android:title="Theme" />

        <ListPreference
            android:entries="@array/fontSizeCaptions"
            android:entryValues="@array/fontSizeValues"
            android:key="task_list_font_size"
            android:title="Task list font size" />
    </PreferenceCategory>


    <PreferenceCategory android:title="Notifications">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="reminder_notify"
            android:title="@string/pref_title_new_message_notifications" />

        <ListPreference
            android:dependency="reminder_notify"
            android:entries="@array/proximityCaptions"
            android:entryValues="@array/proximityValues"
            android:key="proximity_distance"
            android:summary="Select proximity radius for location based reminders in meters"
            android:title="Location proximity" />


        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="reminder_notify"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="reminder_notify"
            android:key="notification_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>


</PreferenceScreen>         