<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.handytasks.handytasks.activities.TaskView">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:autoText="false"
        android:inputType="textMultiLine"
        android:textSize="12pt" />

    <LinearLayout
        android:id="@+id/task_tags_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:orientation="horizontal">

    </LinearLayout>

    <CheckBox
        android:id="@+id/taskCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/task_tags_container"
        android:onClick="onTaskCompleted"
        android:text="@string/task_completed_caption" />

    <ImageView
        android:id="@+id/reminder_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskCompleted"
        android:src="@drawable/dotted" />

    <LinearLayout
        android:id="@+id/reminder_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminder_separator"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:visibility="visible">

        <!--
                <ImageButton
                    android:id="@+id/toggle_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onToggleReminder"
                    android:src="@drawable/ic_reminder" />
        -->
        <TextView
            android:id="@+id/toggle_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:enabled="true"
            android:inputType="text"
            android:onClick="onToggleReminder"
            android:text="@string/add_reminder"
            android:textSize="11pt" />

        <LinearLayout
            android:id="@+id/reminder_params_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/reminder_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/reminder_type_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:enabled="true"
                    android:inputType="text"
                    android:onClick="onSelectReminderType"
                    android:text="Timed"
                    android:textSize="11pt" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timed_params"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/reminder_timed_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:enabled="true"
                    android:inputType="textMultiLine"
                    android:onClick="onSelectDateClick"
                    android:paddingRight="5pt"
                    android:text="@string/today_underline"
                    android:textSize="11pt" />

                <TextView
                    android:id="@+id/reminder_timed_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:enabled="true"
                    android:inputType="textMultiLine"
                    android:onClick="onSelectTimeClick"
                    android:text="@string/morning_underline"
                    android:textSize="11pt" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_params"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/reminder_select_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:enabled="true"
                    android:inputType="textMultiLine"
                    android:onClick="onPickLocation"
                    android:text="Pick location"
                    android:textSize="11pt" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <!--
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reminder"
            android:id="@+id/switch1"
            android:layout_below="@+id/toggle_reminder"
            />
    -->

</RelativeLayout>
